tests/fail/reserved_keyword_only_with_quotes.rs
concat_idents::concat_idents!(fn_name = "struct" {
    fn fn_name() {
        /* reserved key-words cannot make up an ident on their own */
    }
});

fn main() {}
